Iconos y fondo blog viajes
Se añade línea adicional de ícono de pestaña. Asignación de fondo para
el blog de viajes

--- a/FrameworksYLibreríasCSS_Andrés_Ibarra/Blog_viajes_Materialize/css/main.css
+++ b/FrameworksYLibreríasCSS_Andrés_Ibarra/Blog_viajes_Materialize/css/main.css
@@ -1,3 +1,20 @@
-﻿body
-{
+﻿.background{
+    position: fixed;
+    width: 100%;
+}
+
+.background-image{
+    background: url(../resources/backpacker.jpg) no-repeat fixed;
+    height: 80%;
+    top: 20%;
+}
+
+.top-background{
+    height: 20%;
+}
+
+body::before{
+    content: "";
+    border-left: 10 rem #78BBBB;
+    border-right: 10rem #78BBBB;
 }
