--- a/FrameworksYLibreríasCSS_Andrés_Ibarra/Blog_viajes_Materialize/css/main.css
+++ b/FrameworksYLibreríasCSS_Andrés_Ibarra/Blog_viajes_Materialize/css/main.css
@@ -1,20 +1,182 @@
-﻿.background{
-    position: fixed;
-    width: 100%;
-}
-
-.background-image{
+﻿body {
     background: url(../resources/backpacker.jpg) no-repeat fixed;
-    height: 80%;
-    top: 20%;
-}
-
-.top-background{
-    height: 20%;
 }
 
 body::before{
     content: "";
-    border-left: 10 rem #78BBBB;
-    border-right: 10rem #78BBBB;
+    background: #64FFDA;
+    height: 15%;
+    position: fixed;
+    width: 100%;
+}
+
+.brand-logo, .brand>h2, .zmdi, .wrapper{
+    position: relative;
+}
+
+/*Cabecera*/
+
+.brand{
+    position: absolute;
+    top: 5%;
+}
+
+.brand-logo{
+    left: 15%;
+    top: -30%;
+    width: 25%;
+}
+
+.brand>h2{
+    display: inline-block;
+    font-size: 1.5rem;
+    left: 40%;
+    margin-top: 8%;
+}
+
+.zmdi{
+    top: -30%;
+}
+
+.button-collapse{
+    right: 5%;
+    top: 2rem;
+}
+
+.zmdi-menu{
+    color: #004D40;
+}
+
+.side-nav>li>a>.zmdi{
+    top: 0.5%;
+}
+
+/*Contenido*/
+
+.wrapper{
+    margin-top: 10rem;
+}
+
+.gallery>img{
+    margin-bottom: 5%;
+}
+
+.social>a>.zmdi{
+    margin-bottom: 15%;
+}
+
+.social>a{
+    display: block;
+}
+
+.chip>.zmdi{
+    left: 0.3rem;
+    top: 0.1rem;
+}
+
+.card-reveal>p{
+    text-align: justify;
+}
+
+form{
+    background-color: white;
+    border-radius: 3px;
+}
+
+form>.row>button{
+    margin-left: 2%;
+    margin-top: 9%;
+}
+
+.input-field{
+    margin-top: 2rem;
+}
+
+.switch{
+    position: relative;
+    left: 35%;
+}
+
+.author>.card-image>img{
+    border-radius: 50%;
+    left: 23%;
+    height: 50%;
+    width: 50%;
+}
+
+.author>.card-content>.card-title{
+    border-bottom: 1px #004D40 solid;
+}
+
+.card-content>p{
+    font-size: 1.1rem;
+}
+
+/*Tablets*/
+
+@media screen and (max-width: 992px){
+
+    /*Cabecera*/
+
+    .brand-logo{
+        left: 25% !important;
+    }
+
+    .brand>h2{
+        left: 40%;
+    }
+
+    /*Contenido*/
+
+    .wrapper{
+        margin-top: 7rem;
+    }
+    
+    form>.row>button{
+        margin-top: 4rem;
+    }
+
+    .author>.card-image>img{
+        left: 40%;
+        width: 20%;
+    }
+}
+
+/*Celulares*/
+
+@media screen and (max-width: 600px){
+
+    /*Cabecera*/
+
+    .brand-logo{
+        left: 0.5rem;
+        top: -0.6rem;
+        width: 38%;
+    }
+
+    .brand>h2{
+        font-size: 0.75em;
+        left: 40%;
+    }
+
+    /*Contenido*/
+
+    .wrapper{
+        margin-top: 20%;
+    }
+
+    .social>a{
+        display: inline-block;
+        left: 15%;
+        margin-right: 5%;
+        position: relative;
+    }
+
+    .offset-m2>label, .offset-m2>.switch{
+        margin-left: 10%;
+    }
+
+    form > .row > button{
+        left: 38%;
+    }
 }
